[project]
name = "amazon-ads-ai-proxy"
version = "0.1.0"
description = "Token-refresh proxy for Amazon's advertising-ai-eu.amazon.com MCP endpoint."
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
